# ormd-open-relational-markdown

./: .gitignore  README.md  charter.md  charter.ormd  cli-plan.md  doc1.ormd  instructions_for_jules.ormd  spec0.1-updated-fixed.html  spec0.1-updated.html  spec0.1-updated.ormd  spec0.1.md  spec0.1.ormd  test_edit.ormd
ormd_cli/: CONTRIBUTING.md  README.md  debug_validate.py  pyproject.toml  test.ormd
ormd_cli/examples/: climate-report-02.html  climate-report-02.ormd  climate-report-02_content_compliant.ormd  climate-report-02_meta_compliant.json  climate-report.html  climate-report.ormd  climate.html  climate.ormd  climate_meta.json  content.ormd  hello.html  hello.ormd  locked_test.ormd  restricted.ormd  schema_example.html  schema_example.ormd  schema_example2.ormd.crswap  signed.ormd  simple.ormd  test-doc.html  test-doc.ormd  test.html  test.ormd  test_content_compliant.ormd  test_meta_compliant.json  update_test.ormd
ormd_cli/examples/static/: style.css
ormd_cli/hooks/: pre-commit-ormd  setup_hooks.py
ormd_cli/src/ormd_cli/: converter.py  html_generator.py  logger.py  main.py  packager.py  parser.py  schema.py  server.py  updater.py  utils.py  (+1 more)
ormd_cli/src/ormd_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ormd_cli/tests/: test_convert_command.py  test_create_command.py  test_html_generator.py  test_legacy_meta_blocks.py  test_parser_unit.py  test_schema_validation.py  test_update_unit.py  test_updater.py  test_validate_integration.py  test_validator.py  test_validator_enhanced.py
ormd_cli/unpacked/: meta.json
(+48 files in other folders)
